--- a/src/pages/sign-in/sign-in.html
+++ b/src/pages/sign-in/sign-in.html
@@ -1,18 +1,25 @@
-<!--
-  Generated template for the SignInPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>sign-in</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label>Client ID</ion-label>
+      <ion-input type="text" [(ngModel)]="reqJwt.client_id"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Client Secret</ion-label>
+      <ion-input type="text" [(ngModel)]="reqJwt.client_secret"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>User ID</ion-label>
+      <ion-input type="text" [(ngModel)]="reqJwt.username"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>User PW</ion-label>
+      <ion-input type="text" [(ngModel)]="reqJwt.password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <button ion-button block icon-left (click)="signIn()">
+        SIGN IN
+      </button>
+    </ion-item>
+  </ion-list>
 </ion-content>
