--- a/src/pages/my-info/my-info.html
+++ b/src/pages/my-info/my-info.html
@@ -1,18 +1,43 @@
-<!--
-  Generated template for the MyInfoPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>my-info</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>My Info</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      jti
+      <ion-note item-end>{{jtwInfo.jti}}</ion-note>
+    </ion-item>
+    <ion-item>
+      client_id
+      <ion-note item-end>{{jtwInfo.client_id}}</ion-note>
+    </ion-item>
+    <ion-item>
+      user_name
+      <ion-note item-end>{{jtwInfo.user_name}}</ion-note>
+    </ion-item>
+    <ion-item>
+      authorities
+      <ion-note item-end>{{jtwInfo.authorities}}</ion-note>
+    </ion-item>
+    <ion-item>
+      scope
+      <ion-note item-end>{{jtwInfo.scope}}</ion-note>
+    </ion-item>
+    <ion-item>
+      exp
+      <p>{{jtwInfo.exp}}</p>
+      <p>{{jtwInfo.exp | milliseconds | date: 'yyyy-MM-dd HH:mm:ss'}}</p>
+    </ion-item>
+    <ion-item>
+      <button ion-button block icon-left (click)="signOut()">
+        Sign Out
+      </button>
+    </ion-item>
+  </ion-list>
 </ion-content>
