--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,20 +16,20 @@
     </ion-item>
     <ng-container *ngIf="tokenInfo != null">
       <ion-item>
-        access_token
-        <ion-note>{{tokenInfo.access_token}}</ion-note>
+        accessToken
+        <ion-note>{{tokenInfo.accessToken}}</ion-note>
       </ion-item>
       <ion-item>
-        token_type
-        <ion-note item-end>{{tokenInfo.token_type}}</ion-note>
+        tokenType
+        <ion-note item-end>{{tokenInfo.tokenType}}</ion-note>
       </ion-item>
       <ion-item>
-        refresh_token
-        <ion-note>{{tokenInfo.refresh_token}}</ion-note>
+        refreshToken
+        <ion-note>{{tokenInfo.refreshToken}}</ion-note>
       </ion-item>
       <ion-item>
-        expires_in
-        <ion-note item-end>{{tokenInfo.expires_in}}</ion-note>
+        expiresIn
+        <ion-note item-end>{{tokenInfo.expiresIn}}</ion-note>
       </ion-item>
       <ion-item>
         scope
