--- a/src/pages/sign-in/sign-in.html
+++ b/src/pages/sign-in/sign-in.html
@@ -2,11 +2,11 @@
   <ion-list>
     <ion-item>
       <ion-label>Client ID</ion-label>
-      <ion-input type="text" [(ngModel)]="reqTokenInfo.client_id"></ion-input>
+      <ion-input type="text" [(ngModel)]="reqTokenInfo.clientId"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Client Secret</ion-label>
-      <ion-input type="text" [(ngModel)]="reqTokenInfo.client_secret"></ion-input>
+      <ion-input type="text" [(ngModel)]="reqTokenInfo.clientSecret"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>User ID</ion-label>
