--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,4 +34,14 @@
       <ion-note item-end>{{tokenInfo.jti}}</ion-note>
     </ion-item>
   </ion-list>
+  <ion-list>
+    <ion-item [color]="isExpired ? 'danger' : 'primary'">
+      token exp: {{tokenExp | date: 'yyyy-MM-dd HH:mm:ss'}}
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-item *ngFor="let item of items">
+      {{item.str1}} - {{item.str2}}
+    </ion-item>
+  </ion-list>
 </ion-content>
