--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,4 +44,9 @@
       {{item.str1}} - {{item.str2}}
     </ion-item>
   </ion-list>
+  <ion-item>
+      <button ion-button block icon-left (click)="refreshToken()">
+          refresh
+        </button>
+  </ion-item>
 </ion-content>
