--- a/src/pages/my-info/my-info.html
+++ b/src/pages/my-info/my-info.html
@@ -30,6 +30,14 @@
       <ion-note item-end>{{jtwInfo.scope}}</ion-note>
     </ion-item>
     <ion-item>
+      email
+      <ion-note item-end>{{jtwInfo.email}}</ion-note>
+    </ion-item>
+    <ion-item>
+      phoneNumber
+      <ion-note item-end>{{jtwInfo.phoneNumber}}</ion-note>
+    </ion-item>
+    <ion-item>
       exp
       <p>{{jtwInfo.exp}}</p>
       <p>{{jtwInfo.exp | milliseconds | date: 'yyyy-MM-dd HH:mm:ss'}}</p>
