--- a/src/pages/sign-in/sign-in.html
+++ b/src/pages/sign-in/sign-in.html
@@ -12,6 +12,9 @@
       <button ion-button block icon-left (click)="signIn()">
         SIGN IN
       </button>
+      <button ion-button block icon-left (click)="moveToSignUp()">
+        SIGN UP
+      </button>
     </ion-item>
   </ion-list>
 </ion-content>
